# quant-finance

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  GEMINI.md  README.md  hello.py  launch_fixed_income_streamlit_app.sh  launch_options_streamlit_app.sh  launch_portfolio_management_streamlit_app.sh  launch_quantfinance_streamlit_app.sh  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: DEPLOY-EC2.md  code-quality.yml  deploy-ec2.yml  deploy-marimo.yml  tests.yml
.streamlit/: config.toml
app/: quant_finance.py
app/pages/: greeks.py
app_fixed_income/: fixed_income.py
app_fixed_income/pages/: bond_pricing.py
app_options/: options.py
app_options/pages/: binomial_model.py  option_payoffs.py  put_call_parity.py  volatility_spreads.py
app_portfolio_management/: portfolio_management.py
app_portfolio_management/pages/: capital_asset_pricing_model.py  modern_portfolio_theory.py  portfolio_variance_matrix.py
app_quant_finance/: quantitative_finance.py
app_quant_finance/pages/: binomial_tree.py  black_scholes.py  greeks_delta.py  greeks_gamma.py  greeks_rho.py  greeks_theta.py  greeks_vega.py  monte_carlo_stock_price.py  wiener_process.py
docker/: AWS_CLOUD.md  Caddyfile  Dockerfile.base  Dockerfile.fixed-income  Dockerfile.options  Dockerfile.portfolio-management  Dockerfile.quant-finance  README.md  TROUBLESHOOTING.md  docker-compose.prod.yml  docker-compose.yml  nginx-main.conf  nginx.conf
src/: __init__.py
src/options/: payoffs.py
tests/: test_option_payoffs.py
(+22 files in other folders)
