[project]
name = "quant-finance"
version = "0.1.0"
description = "Quantitative Finance Examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "ruff>=0.9.6",
    "scipy>=1.15.2",
    "streamlit>=1.44.1",
]
