[project]
name = "quant-finance"
version = "0.1.0"
description = "Quantitative Finance Examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Runtime dependencies only - these are installed in Docker images
    "duckdb>=1.4.1",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "sqlglot>=28.6.0",
    "streamlit>=1.52.2",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    # Development tools - not installed in Docker images
    "black[jupyter]>=26.1.0",
    "jupyter>=1.1.1",
    "marimo>=0.17.7",
    "pre-commit>=3.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
